@@ -344,11 +344,18 @@ sub xml_to_metafield
 	}
 	foreach my $child ( $xml->getChildNodes )
 	{
-		if( $xml->nodeName ne "help" )
+		if( $child->nodeName eq "help" )
 		{
 			if( !$cloned ) { $field = $field->clone; $cloned = 1; }	
 			$field->set_property( 
 				"help_xhtml", 
+				EPrints::XML::contents_of( $child ) );
+		}
+		if( $child->nodeName eq "title" )
+		{
+			if( !$cloned ) { $field = $field->clone; $cloned = 1; }	
+			$field->set_property( 
+				"title_xhtml", 
 				EPrints::XML::contents_of( $child ) );
 		}
 	}
